<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context="ui.view.ParticipateActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/participate"
        android:background="@color/color1"
        android:textColor="@color/color3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/record"
        android:textColor="@color/color3"
        android:textColorHint="@color/color3"
        android:inputType="text"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/color3"
        android:textColorHint="@color/color3"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp" />

    <RadioGroup
        android:id="@+id/rgOpinions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbBad"
            android:textColor="@color/color3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad" />

        <RadioButton
            android:id="@+id/rbRegular"
            android:textColor="@color/color3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/rbGood"
            android:textColor="@color/color3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/rbGreat"
            android:textColor="@color/color3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_vote"
        android:textColor="@color/color3"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/rgOpinions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4" />

</androidx.constraintlayout.widget.ConstraintLayout>
