<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity"
    android:background="@color/color2">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/color3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnParticipate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/participate"
        android:textSize="18sp"
        android:textColor="@color/color3"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4"/>

    <Button
        android:id="@+id/btnCheckVote"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/check_vote"
        android:textSize="18sp"
        android:textColor="@color/color3"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnParticipate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4"/>

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="18sp"
        android:textColor="@color/color3"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnCheckVote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4"/>

</androidx.constraintlayout.widget.ConstraintLayout>
