<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context="ui.view.ParticipateActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/check_vote"
        android:background="@color/color1"
        android:textColor="@color/color3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vote_code"
        android:textColor="@color/color3"
        android:textColorHint="@color/color3"
        android:inputType="text"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/color3"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/etCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:textColor="@color/color3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/color3"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:backgroundTint="@color/color4" />

</androidx.constraintlayout.widget.ConstraintLayout>
